devops/kubernetes/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voucherskit-backend
  labels:
    app: voucherskit-backend
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: voucherskit-backend
