devops/kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voucherskit-frontend
  labels:
    app: voucherskit-frontend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: voucherskit-frontend
